--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,6 +5,7 @@ certifi==2024.6.2
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
+crud==0.1
 dnspython==2.6.1
 email_validator==2.1.2
 exceptiongroup==1.2.1
@@ -47,6 +48,7 @@ rich==13.7.1
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
+SQLAlchemy==2.0.31
 starlette==0.37.2
 typer==0.12.3
 typing_extensions==4.12.2
