--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,8 @@ site_url: https://venture-capitech.github.io/backend
 
 theme:
   name: material
+  features:
+    - content.tabs.link
 
 markdown_extensions:
   - pymdownx.superfences
